--- a/src/components/Gif/Gif.css
+++ b/src/components/Gif/Gif.css
@@ -1,21 +1,22 @@
-figure {
+.gif-container {
+    width: 100%;
     margin: 0;
-    display: grid;
-    /* grid-template-rows: 1fr auto; */
     margin-bottom: 10px;
     break-inside: avoid;
     cursor: pointer;
     position: relative;
 }
 
-figure img {
-    max-width: 100%;
-    display: block;
+.gif-link img {
+    width: 100%;
+    object-fit: contain;
 }
 
-figcaption {
-    font-size: small;
-    background-color: rgba(255, 255, 255, .3);
+.gif-link h4 {
+    background: rgba(0, 0, 0, .3);
+    bottom: 0;
+    font-size: 12px;
+    color: #fff;
+    margin: 0;
     position: absolute;
-    bottom: 10px;
 }
