--- a/src/components/Gif/Gif.css
+++ b/src/components/Gif/Gif.css
@@ -1,20 +1,21 @@
 .gif-container {
-    width: 100%;
     margin: 0;
-    margin-bottom: 10px;
-    break-inside: avoid;
     cursor: pointer;
     position: relative;
+    border-radius: 10px;
+    overflow: hidden;
+    justify-content: center;
+    align-items: center;
 }
 
-.gif-link img {
-    width: 100%;
+.gif-container img {
     object-fit: contain;
+    width: 100%;
 }
 
-.gif-link h4 {
+.gif-container h4 {
     background: rgba(0, 0, 0, .3);
-    bottom: 0;
+    top: 10px;
     font-size: 12px;
     color: #fff;
     margin: 0;
