--- a/src/components/ListOfGifs/ListOfGifs.css
+++ b/src/components/ListOfGifs/ListOfGifs.css
@@ -2,6 +2,6 @@
     width: 100%;
     min-height: 100vh;
     display: grid;
-    gap: 10px 16px;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: .6em;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
