--- a/src/pages/SearchResults/SearchResults.css
+++ b/src/pages/SearchResults/SearchResults.css
@@ -3,17 +3,17 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    padding: 1em 8em;
+    padding: 3em 8em;
 }
 
-.main h3 {
+.main h2 {
     margin: 24px 0;
-    font-size: xx-large;
+    font-size: x-large;
     align-self: flex-start;
 }
 
 @media screen and (max-width: 950px) {
     .main {
-        padding: 1em;
+        padding: 3em;
     }
 }
