empezando con el usuario y favs

--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ body a{
 }
 
 .main-app-container {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
